Shenandoah: Heap size may be too small for region to align to large page size

XMLWordPrintable

    • gc
    • b26

        TestLargePages.java failed on Linux AArch64, where the large page size is 500M and heap size is only 131M.


        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahHeapRegion.cpp:574
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error
        (/home/tester/ojdkbuild-tmp-ramdisk/openjdk/src/hotspot/share/gc/shenandoah/shenandoahHeapRegion.cpp:574),
        pid=3239, tid=3242
        # guarantee(RegionCount >= MIN_NUM_REGIONS) failed: Should have at
        least minimum regions
        #
        # JRE version: (11.0.12) (fastdebug build )
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug
        11.0.12-internal+0-adhoc.tester.openjdk, mixed mode, sharing, tiered,
        compressed oops, shenandoah gc, linux-aarch64)
        # No core dump will be written. Core dumps have been disabled. To
        enable core dumping, try "ulimit -c unlimited" before starting Java
        again
        #
        # An error report file with more information is saved as:
        # /mnt/ramdisk/java-11-openjdk-11.0.12.4_ea-0.vanilla.tagly.ojdk11~u~upstream.hotspot.fastdebug.sdk.el7.aarch64.tarxz/hotspot-work/gc/shenandoah/options/TestLargePages_id1/hs_err_pid3239.log
        #

        OpenJDK 64-Bit Server VM warning: Large pages size (524288K) is too large to afford page-sized regions, disabling uncommit

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: