8268127: Shenandoah: Heap size may be too small for region to align to large page size

Reviewed-by: rkennke, shade
Backport-of: 5ad4a91c3d89f7118a99e5bd56fc86a9a6d57abf